# nfs-browser

./: .gitignore  .gn  BUILD.gn  DEPS  README.md  dep_FORCDOS.sh  nfs-browser.spec  run.sh
SOURCES/: 0001.patch  0002-disable-plugin-install-info-bar.patch  0003-disable-plugin-install-info-bar.patch  0004-change-version-2665.patch  0005-change-mode-of-pepperflash.patch
apps/: BUILD.gn
ash/display/: display_util.cc  resolution_notification_controller.cc
ash/mus/: BUILD.gn
ash/resources/: BUILD.gn
base/: BUILD.gn  logging.cc  logging.h  sys_info.cc  sys_info.h  sys_info_linux.cc  sys_info_win.cc
base/files/: file_util_win.cc
base/memory/: memory_pressure_monitor.h  memory_pressure_monitor_linux.cc  memory_pressure_monitor_linux.h  memory_pressure_monitor_win.cc
base/message_loop/: message_loop.cc  message_loop.h  message_pump_default.cc  message_pump_libevent.cc  message_pump_win.cc
base/process/: launch_posix.cc
base/threading/: simple_thread.cc  thread.cc  thread_restrictions.h
blimp/engine/: BUILD.gn
buildtools/: .gitignore
cc/base/: index_rect.h  reverse_spiral_iterator.h  spiral_iterator.h
cc/tiles/: gpu_image_decode_controller.cc
chrome/: BUILD.gn  VERSION  chrome.isolate  chrome_paks.gni
chrome/android/: BUILD.gn
chrome/app/: BUILD.gn  bookmarks_strings.grdp  chrome_command_ids.h  chrome_crash_reporter_client.cc  chrome_dll.rc  chrome_exe.rc  chrome_exe.ver  chrome_main_delegate.cc  chrome_main_delegate.h  chromium_strings.grd  generated_resources.grd  generated_resources_nfs.grdp  settings_chromium_strings.grdp
chrome/browser/: BUILD.gn  about_flags.cc  browser_about_handler.cc  browser_process.h  browser_process_impl.cc  browser_process_impl.h  browser_resources.grd  chrome_browser_main.cc  chrome_browser_main_linux.cc  chrome_content_browser_client.cc  chrome_notification_types.h  command_updater.cc  icon_loader_auralinux.cc  pepper_broker_infobar_delegate.cc  platform_util.cc  platform_util_linux.cc  platform_util_win.cc  resources_util.cc  shell_integration.h  shell_integration_linux.cc  shell_integration_win.cc
chrome/common/: BUILD.gn  chrome_constants.cc  chrome_constants.h  chrome_content_client.cc  chrome_features.cc  chrome_key.cc  chrome_key.h  chrome_paths_linux.cc  chrome_paths_win.cc  chrome_switches.cc  chrome_switches.h  chrome_util.cc  chrome_util.h  crash_keys.cc  logging_chrome.cc  pref_names.cc  pref_names.h  prerender_messages.h  render_messages.h  secure_origin_whitelist.cc  url_constants.cc  url_constants.h
chrome/docs/: platform-pillar.html
chrome/install_static/: install_util.cc
chrome/renderer/: chrome_content_renderer_client.cc  content_settings_observer.cc  content_settings_observer.h  page_load_histograms.cc
chrome/test/: BUILD.gn
chrome/utility/: BUILD.gn
chrome_elf/: BUILD.gn
components/: components_chromium_strings.grd  components_strings.grd  error_page_strings.grdp  nfs_strings.grdp  security_interstitials_strings.grdp  ssl_errors_strings.grdp  version_ui_strings.grdp
components/app_modal/: javascript_dialog_manager.cc
components/component_updater/: configurator_impl.cc  configurator_impl.h
components/constrained_window/: constrained_window_views.cc  constrained_window_views.h
components/domain_reliability/: BUILD.gn  bake_in_configs.py  google_configs.cc  uploader.cc
components/nfs_sync/: BUILD.gn  account_checker.cc  account_checker.h  account_info.cc  account_info.h  nfs_data_syncer.cc  nfs_data_syncer.h  nfs_sync_data_fetcher.cc  nfs_sync_data_fetcher.h  nfs_sync_observer.h  nfs_sync_pref_names.cc  nfs_sync_pref_names.h  nfs_sync_utils.cc  nfs_sync_utils.h
components/os_crypt/: key_storage_libsecret.cc  key_storage_linux.cc  key_storage_util_linux.cc
components/prefs/: BUILD.gn  components_key.cc  components_key.h  json_pref_store.cc  pref_change_registrar.cc  pref_registry.cc
components/resources/: translate_resources.grdp  version_ui_scaled_resources.grdp
components/search/: search.cc
components/search_engines/: prepopulated_engines.json  template_url.cc  template_url_prepopulate_data.cc
components/ssl_config/: ssl_config_service_manager_pref.cc  ssl_config_switches.cc  ssl_config_switches.h
components/strings/: components_chromium_strings_en-GB.xtb  components_chromium_strings_zh-CN.xtb  components_chromium_strings_zh-TW.xtb  components_strings_en-GB.xtb  (+2 more)
content/: DEPS
content/browser/download/speed_download/: BUILD.gn
content/browser/download/speed_download/client/linux/: apx_base64.c  apx_base64.h  apx_config.c  apx_config.h  apx_file.c  apx_file.h  apx_hftsc.c  apx_hftsc.h  apx_network_deteck.c  apx_task.c  apx_task.h  apx_transfer_a2.h  apx_transfer_cl.c  apx_transfer_cl.h  apx_user.c  apx_user.h  apx_wlog.c  apx_wlog.h
content/browser/download/speed_download/include/: apx_hftsc_api.h  apx_list.h
content/child/: BUILD.gn  multipart_response_delegate.cc  plugin_messages.h  request_info.cc  request_info.h  resource_dispatcher.cc  resource_dispatcher.h  runtime_features.cc
content/child/npapi/: np_channel_base.h  npobject_proxy.h  npobject_util.h  plugin_instance.h  plugin_stream_url.h  plugin_url_fetcher.h  webplugin.h  webplugin_delegate_impl.h  webplugin_ime_win.h
content/plugin/: BUILD.gn  webplugin_delegate_stub.h  webplugin_proxy.h
debian/: changelog  control  copyright  nfs-browser.desktop  postinst  prerm  rules
extensions/: BUILD.gn
extensions/browser/pre_install/: BUILD.gn  preinstall_crx_info.cc  preinstall_crx_info.h
extensions/browser/pre_install/extensions/: ActiveX.crx  Adblock.crx  MouseGesture.crx  SmoothScroll.crx
gin/: BUILD.gn
headless/: BUILD.gn
ipc/: ipc_message_start.h  ipc_message_utils.h  ipc_sync_message.h
launcher/: BUILD.gn  launcher.cc
media/: BUILD.gn
pdf/: out_of_process_instance.cc
printing/: print_job_constants.cc  print_settings.h  print_settings_conversion.cc
sql/: BUILD.gn  connection.cc  recovery.cc  sql_switches.cc  sql_switches.h  statement.cc
tools/: check_grd_for_unused_strings.py  install_tools.py
url/: gurl.h  url_constants.cc  url_constants.h
v8/: .gitignore  BUILD.gn
(+1720 files in other folders)
