# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

static_library("nfs_sync") {
  sources = [
    "account_checker.cc",
    "account_checker.h",
    "account_info.cc",
    "account_info.h",
    "nfs_data_syncer.cc",
    "nfs_data_syncer.h",
    "nfs_sync_observer.h",
    "nfs_sync_pref_names.cc",
    "nfs_sync_pref_names.h",
    "nfs_sync_utils.cc",
    "nfs_sync_utils.h",
  ]

  deps = [
    "//base",
    "//components/bookmarks/browser",
  ]
}

