# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/ui.gni")

if (is_component_build) {
  link_target_type = "source_set"
} else {
  link_target_type = "static_library"
}
target(link_target_type, "child") {
  # Targets external to content should always link to the public API.
  # Internal targets can link to this but only if they're child processes
  # (i.e. not content/browser or content/common) and only if they're inside the
  # content component (i.e. not content/test or content/shell).
  visibility = [
    ":*",
    "//content/gpu/*",
    "//content/plugin/*",
    "//content/ppapi_plugin/*",
    "//content/public/child:child_sources",
    "//content/renderer/*",
    "//content/utility/*",
    "//tools/ipc_fuzzer/*",
  ]
  if (is_android) {
    # See comment in content/app/BUILD.gn above content_app_deps.
    visibility += [ "//content/app:*" ]
  }

  sources = [
    "appcache/appcache_backend_proxy.cc",
    "appcache/appcache_backend_proxy.h",
    "appcache/appcache_dispatcher.cc",
    "appcache/appcache_dispatcher.h",
    "appcache/appcache_frontend_impl.cc",
    "appcache/appcache_frontend_impl.h",
    "appcache/web_application_cache_host_impl.cc",
    "appcache/web_application_cache_host_impl.h",
    "assert_matching_enums.cc",
    "background_sync/background_sync_provider.cc",
    "background_sync/background_sync_provider.h",
    "background_sync/background_sync_type_converters.cc",
    "background_sync/background_sync_type_converters.h",
    "blink_platform_impl.cc",
    "blink_platform_impl.h",
    "blob_storage/blob_consolidation.cc",
    "blob_storage/blob_consolidation.h",
    "blob_storage/blob_message_filter.cc",
    "blob_storage/blob_message_filter.h",
    "blob_storage/blob_transport_controller.cc",
    "blob_storage/blob_transport_controller.h",
    "blob_storage/webblobregistry_impl.cc",
    "blob_storage/webblobregistry_impl.h",
    "browser_font_resource_trusted.cc",
    "browser_font_resource_trusted.h",
    "child_discardable_shared_memory_manager.cc",
    "child_discardable_shared_memory_manager.h",
    "child_gpu_memory_buffer_manager.cc",
    "child_gpu_memory_buffer_manager.h",
    "child_histogram_message_filter.cc",
    "child_histogram_message_filter.h",
    "child_message_filter.cc",
    "child_message_filter.h",
    "child_process.cc",
    "child_process.h",
    "child_resource_message_filter.cc",
    "child_resource_message_filter.h",
    "child_shared_bitmap_manager.cc",
    "child_shared_bitmap_manager.h",
    "child_thread_impl.cc",
    "child_thread_impl.h",
    "content_child_helpers.cc",
    "content_child_helpers.h",
    "database_util.cc",
    "database_util.h",
    "db_message_filter.cc",
    "db_message_filter.h",
    "dwrite_font_proxy/dwrite_font_proxy_init_win.cc",
    "dwrite_font_proxy/dwrite_font_proxy_init_win.h",
    "dwrite_font_proxy/dwrite_font_proxy_win.cc",
    "dwrite_font_proxy/dwrite_font_proxy_win.h",
    "dwrite_font_proxy/dwrite_localized_strings_win.cc",
    "dwrite_font_proxy/dwrite_localized_strings_win.h",
    "dwrite_font_proxy/font_fallback_win.cc",
    "dwrite_font_proxy/font_fallback_win.h",
    "file_info_util.cc",
    "file_info_util.h",
    "fileapi/file_system_dispatcher.cc",
    "fileapi/file_system_dispatcher.h",
    "fileapi/webfilesystem_impl.cc",
    "fileapi/webfilesystem_impl.h",
    "fileapi/webfilewriter_base.cc",
    "fileapi/webfilewriter_base.h",
    "fileapi/webfilewriter_impl.cc",
    "fileapi/webfilewriter_impl.h",
    "font_warmup_win.cc",
    "font_warmup_win.h",
    "ftp_directory_listing_response_delegate.cc",
    "ftp_directory_listing_response_delegate.h",
    "image_decoder.cc",
    "image_decoder.h",
    "indexed_db/indexed_db_dispatcher.cc",
    "indexed_db/indexed_db_dispatcher.h",
    "indexed_db/indexed_db_key_builders.cc",
    "indexed_db/indexed_db_key_builders.h",
    "indexed_db/indexed_db_message_filter.cc",
    "indexed_db/indexed_db_message_filter.h",
    "indexed_db/webidbcursor_impl.cc",
    "indexed_db/webidbcursor_impl.h",
    "indexed_db/webidbdatabase_impl.cc",
    "indexed_db/webidbdatabase_impl.h",
    "indexed_db/webidbfactory_impl.cc",
    "indexed_db/webidbfactory_impl.h",
    "memory/child_memory_coordinator_impl.cc",
    "memory/child_memory_coordinator_impl.h",
    "memory/child_memory_coordinator_impl_android.cc",
    "memory/child_memory_coordinator_impl_android.h",
    "memory/child_memory_message_filter.cc",
    "memory/child_memory_message_filter.h",
    "mojo/type_converters.h",
    "multipart_response_delegate.cc",
    "multipart_response_delegate.h",
    "notifications/notification_data_conversions.cc",
    "notifications/notification_data_conversions.h",
    "notifications/notification_dispatcher.cc",
    "notifications/notification_dispatcher.h",
    "notifications/notification_manager.cc",
    "notifications/notification_manager.h",
    #"npapi/np_channel_base.cc",
    "npapi/np_channel_base.h",
    "npapi/npobject_base.h",
    #"npapi/npobject_proxy.cc",
    "npapi/npobject_proxy.h",
    #"npapi/npobject_stub.cc",
    "npapi/npobject_stub.h",
    #"npapi/npobject_util.cc",
    "npapi/npobject_util.h",
    #"npapi/npruntime_util.cc",
    "npapi/npruntime_util.h",
    #"npapi/plugin_host.cc",
    "npapi/plugin_host.h",
    #"npapi/plugin_instance.cc",
    "npapi/plugin_instance.h",
    "npapi/plugin_instance_mac.mm",
    #"npapi/plugin_lib.cc",
    "npapi/plugin_lib.h",
    #"npapi/plugin_stream.cc",
    "npapi/plugin_stream.h",
    #"npapi/plugin_stream_posix.cc",
    #"npapi/plugin_stream_win.cc",
    #"npapi/plugin_stream_url.cc",
    "npapi/plugin_stream_url.h",
    #"npapi/plugin_string_stream.cc",
    "npapi/plugin_string_stream.h",
    #"npapi/plugin_url_fetcher.cc",
    "npapi/plugin_url_fetcher.h",
    "npapi/plugin_web_event_converter_mac.h",
    "npapi/plugin_web_event_converter_mac.mm",
    "npapi/webplugin.h",
    "npapi/webplugin_accelerated_surface_mac.h",
    "npapi/webplugin_delegate.h",
    #"npapi/webplugin_delegate_impl.cc",
    "npapi/webplugin_delegate_impl.h",
    #"npapi/webplugin_delegate_impl_android.cc",
    #"npapi/webplugin_delegate_impl_aura.cc",
    "npapi/webplugin_delegate_impl_mac.mm",
    #"npapi/webplugin_delegate_impl_win.cc",
    "npapi/webplugin_resource_client.h",
    "power_monitor_broadcast_source.cc",
    "power_monitor_broadcast_source.h",
    #"plugin_message_generator.cc",
    "plugin_message_generator.h",
    "plugin_messages.h",
    #"plugin_param_traits.cc",

    "plugin_param_traits.h",
    "push_messaging/push_dispatcher.cc",
    "push_messaging/push_dispatcher.h",
    "push_messaging/push_provider.cc",
    "push_messaging/push_provider.h",
    "quota_dispatcher.cc",
    "quota_dispatcher.h",
    "quota_message_filter.cc",
    "quota_message_filter.h",
    "request_extra_data.cc",
    "request_extra_data.h",
    "resource_dispatcher.cc",
    "resource_dispatcher.h",
    "resource_scheduling_filter.cc",
    "resource_scheduling_filter.h",
    "request_info.cc",
    "request_info.h",
    "runtime_features.cc",
    "runtime_features.h",
    "scoped_child_process_reference.cc",
    "scoped_child_process_reference.h",
    "scoped_web_callbacks.h",
    "service_factory.cc",
    "service_factory.h",
    "service_worker/service_worker_dispatcher.cc",
    "service_worker/service_worker_dispatcher.h",
    "service_worker/service_worker_handle_reference.cc",
    "service_worker/service_worker_handle_reference.h",
    "service_worker/service_worker_message_filter.cc",
    "service_worker/service_worker_message_filter.h",
    "service_worker/service_worker_network_provider.cc",
    "service_worker/service_worker_network_provider.h",
    "service_worker/service_worker_provider_context.cc",
    "service_worker/service_worker_provider_context.h",
    "service_worker/service_worker_registration_handle_reference.cc",
    "service_worker/service_worker_registration_handle_reference.h",
    "service_worker/web_service_worker_impl.cc",
    "service_worker/web_service_worker_impl.h",
    "service_worker/web_service_worker_provider_impl.cc",
    "service_worker/web_service_worker_provider_impl.h",
    "service_worker/web_service_worker_registration_impl.cc",
    "service_worker/web_service_worker_registration_impl.h",
    "shared_memory_data_consumer_handle.cc",
    "shared_memory_data_consumer_handle.h",
    "shared_memory_received_data_factory.cc",
    "shared_memory_received_data_factory.h",
    "shared_worker_devtools_agent.cc",
    "shared_worker_devtools_agent.h",
    "simple_webmimeregistry_impl.cc",
    "simple_webmimeregistry_impl.h",
    "site_isolation_stats_gatherer.cc",
    "site_isolation_stats_gatherer.h",
    "storage_util.cc",
    "storage_util.h",
    "sync_load_response.cc",
    "sync_load_response.h",
    "thread_safe_sender.cc",
    "thread_safe_sender.h",
    "url_response_body_consumer.cc",
    "url_response_body_consumer.h",
    "v8_value_converter_impl.cc",
    "v8_value_converter_impl.h",
    "web_data_consumer_handle_impl.cc",
    "web_data_consumer_handle_impl.h",
    "web_database_observer_impl.cc",
    "web_database_observer_impl.h",
    "web_url_loader_impl.cc",
    "web_url_loader_impl.h",
    "web_url_request_util.cc",
    "web_url_request_util.h",
    "webfallbackthemeengine_impl.cc",
    "webfallbackthemeengine_impl.h",
    "webfileutilities_impl.cc",
    "webfileutilities_impl.h",
    "webmessageportchannel_impl.cc",
    "webmessageportchannel_impl.h",
    "webthemeengine_impl_android.cc",
    "webthemeengine_impl_android.h",
    "webthemeengine_impl_default.cc",
    "webthemeengine_impl_default.h",
    "webthemeengine_impl_mac.h",
    "weburlresponse_extradata_impl.cc",
    "weburlresponse_extradata_impl.h",
    "worker_thread_message_filter.cc",
    "worker_thread_message_filter.h",
    "worker_thread_registry.cc",
    "worker_thread_registry.h",
  ]

  if(is_win) {
    sources +=[
      "../../out/Release/obj/content/child/child/np_channel_base.obj",
      "../../out/Release/obj/content/child/child/npobject_proxy.obj",
      "../../out/Release/obj/content/child/child/npobject_stub.obj",
      "../../out/Release/obj/content/child/child/npobject_util.obj",
      "../../out/Release/obj/content/child/child/npruntime_util.obj",
      "../../out/Release/obj/content/child/child/plugin_host.obj",
      "../../out/Release/obj/content/child/child/plugin_instance.obj",
      "../../out/Release/obj/content/child/child/plugin_lib.obj",
      "../../out/Release/obj/content/child/child/plugin_stream.obj",
      #"../../out/Release/obj/content/child/child/plugin_stream_posix.obj",
      "../../out/Release/obj/content/child/child/plugin_stream_win.obj",
      "../../out/Release/obj/content/child/child/plugin_stream_url.obj",
      "../../out/Release/obj/content/child/child/plugin_string_stream.obj",
      "../../out/Release/obj/content/child/child/plugin_url_fetcher.obj",
      "../../out/Release/obj/content/child/child/webplugin_delegate_impl.obj",
      #"../../out/Release/obj/content/child/child/webplugin_delegate_impl_aura.obj",
      "../../out/Release/obj/content/child/child/webplugin_delegate_impl_win.obj",
      "../../out/Release/obj/content/child/child/plugin_message_generator.obj",
      "../../out/Release/obj/content/child/child/plugin_param_traits.obj",
    ]
  } else {
    sources +=[
      "../../out/Release/obj/content/child/child/np_channel_base.o",
      "../../out/Release/obj/content/child/child/npobject_proxy.o",
      "../../out/Release/obj/content/child/child/npobject_stub.o",
      "../../out/Release/obj/content/child/child/npobject_util.o",
      "../../out/Release/obj/content/child/child/npruntime_util.o",
      "../../out/Release/obj/content/child/child/plugin_host.o",
      "../../out/Release/obj/content/child/child/plugin_instance.o",
      "../../out/Release/obj/content/child/child/plugin_lib.o",
      "../../out/Release/obj/content/child/child/plugin_stream.o",
      "../../out/Release/obj/content/child/child/plugin_stream_posix.o",
      #"../../out/Release/obj/content/child/child/plugin_stream_win.o",
      "../../out/Release/obj/content/child/child/plugin_stream_url.o",
      "../../out/Release/obj/content/child/child/plugin_string_stream.o",
      "../../out/Release/obj/content/child/child/plugin_url_fetcher.o",
      "../../out/Release/obj/content/child/child/webplugin_delegate_impl.o",
      "../../out/Release/obj/content/child/child/webplugin_delegate_impl_aura.o",
      #"../../out/Release/obj/content/child/child/webplugin_delegate_impl_win.o",
      "../../out/Release/obj/content/child/child/plugin_message_generator.o",
      "../../out/Release/obj/content/child/child/plugin_param_traits.o",
    ]
  }

  configs += [ "//build/config:precompiled_headers" ]

  public_deps = [
    "//gpu/ipc/client:client",
  ]

  deps = [
    "//base",
    "//components/mime_util",
    "//components/tracing",
    "//components/tracing:startup_tracing",
    "//components/webcrypto",
    "//content/app/resources",
    "//content/app/strings",
    "//content/common",
    "//content/public/common:common_sources",
    "//crypto:platform",
    "//gpu/command_buffer/client",
    "//ipc",
    "//ipc:mojom",
    "//media",
    "//mojo/common",
    "//mojo/edk/system",
    "//net",
    "//services/shell/public/cpp",
    "//services/shell/public/interfaces",
    "//services/shell/runner/common",
    "//skia",
    "//storage/common",
    "//third_party/WebKit/public:blink_headers",
    "//third_party/WebKit/public:image_resources",
    "//third_party/WebKit/public:resources",
    "//third_party/ced",
    "//third_party/npapi",
    "//ui/base",
    "//ui/events/gestures/blink",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/native_theme",
    "//url",
    "//v8",
  ]

  if (is_linux) {
    deps += [
      "//build/config/linux/gtk2",
    ]
  }

  if (!use_default_render_theme) {
    sources -= [
      "webthemeengine_impl_default.cc",
      "webthemeengine_impl_default.h",
    ]
  }

  if (is_android) {
    deps += [ "//third_party/android_tools:cpu_features" ]
  }

  if (is_win) {
    libs = [ "dwrite.lib" ]
    sources += [
      "npapi/webplugin_ime_win.cc",
      "npapi/webplugin_ime_win.h",
    ]
  }

  if (enable_plugins) {
    deps += [
      "//ppapi/proxy",
      "//ppapi/shared_impl",
    ]
  } else {
    sources -= [
      "browser_font_resource_trusted.cc",
      "browser_font_resource_trusted.h",
      "npapi/plugin_host.cc",
      "npapi/plugin_host.h",
      "npapi/plugin_instance.cc",
      "npapi/plugin_instance.h",
      "npapi/plugin_lib.cc",
      "npapi/plugin_lib.h",
      "npapi/webplugin.h",
      "npapi/webplugin_delegate.h",
      "npapi/webplugin_delegate_impl.cc",
      "npapi/webplugin_delegate_impl.h",
      "npapi/webplugin_resource_client.h",
    ]

    if (is_mac) {
      sources -= [
        "npapi/plugin_instance_mac.mm",
        "npapi/plugin_web_event_converter_mac.h",
        "npapi/plugin_web_event_converter_mac.mm",
        "npapi/webplugin_accelerated_surface_mac.h",
        "npapi/webplugin_delegate_impl_mac.mm",
      ]
    } else if (is_win) {
      sources -= [ "npapi/webplugin_delegate_impl_win.cc" ]
    } else if (is_android) {
      sources -= [ "npapi/webplugin_delegate_impl_android.cc" ]
    }
    if (use_aura) {
      sources -= [ "npapi/webplugin_delegate_impl_aura.cc" ]
    }
  }

  configs += [
    "//content:content_implementation",
    "//build/config/compiler:no_size_t_to_int_warning",
  ]

  if (use_aura && is_mac) {
    # This file is already excluded on non-Mac.
    sources -= [ "npapi/webplugin_delegate_impl_mac.mm" ]
  }

  if (is_win || !use_aura) {
    #sources -= [ "npapi/webplugin_delegate_impl_aura.cc" ]
  }

}

# See comment at the top of //content/BUILD.gn for how this works.
group("for_content_tests") {
  visibility = [ "//content/test/*" ]
  if (!is_component_build) {
    public_deps = [
      ":child",
    ]
  }
}
